# pedantic-troll

./: .coverage  README.md  pyproject.toml
src/: main.py
src/pedantic_troll/: logic.py  persistence.py  prompts.py  schema.py
tests/: test_cli.py  test_logic.py
