[project]
name = "pedantic-troll"
version = "0.1.0"
description = "Nitpicks blog post series for internal consistency and continuity errors."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=14.3.3",
    "pydantic>=2.12.5",
    "local-first-common",
]

[project.scripts]
pedantic-troll = "pedantic_troll.logic:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pedantic_troll"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
]

[tool.uv.sources]
local-first-common = { git = "https://github.com/jamalhansen/local-first-common.git", branch = "main" }

[tool.pytest.ini_options]
pythonpath = ["src"]
